2003-04-21  Markus Petermann  <m.petermann@gmx.net>

	* sound.h, sound.cpp:
	  - Removed some methods.
	  - When a sound is not found the game does not exit anymore.
	* user_interface.h, user_interface.cpp:
	  - New methods to play sound effects introduced.
	* angle.h:
	  - Operator < changed.
	* global_data.h, global_data.cpp:
	  - More sound effects.
	* ai.cpp:
	  - Some randomize in the ai methods.
	* game.cpp:
	  - In the detection methods the very own ship is no longer detected anymore.
	* submarine.h, submarine.cpp:
	  - Methods to play sound effects changed.

2003-04-19  Markus Petermann  <m.petermann@gmx.net>

	* sound.h, sound.cpp:
	  - New module for sound effects.
	* game.cpp:
	  - Sound effects for torpedo detonation.
	* submarine.cpp:
	  - Sound effect for torpedo launch.
	  - Noise modification factor changed.
	* global_data.cpp, global_data.h:
	  - Sound effects are loaded now
	* water_splash.h, water_splash.cpp:
	  - Created new classes for diverse water splash types.
	* makedatapack:
	  - data/sounds is now copied to archive now.

2003-04-18  Markus Petermann  <m.petermann@gmx.net>

	* water_splash.h, water_splash.cpp:
	  - New system for multiple texture display introduced.
	* user_interface.cpp:
	  - Night mode color changed.
	  - Console is no longer displayed in night mode.
	* submarine_interface.cpp:
	  - Lead angle system activated.

2003-04-17  Markus Petermann  <m.petermann@gmx.net>

	* ship.h, ship.cpp, submarine.h, submarine.cpp:
	  - Fuel and battery consumption introduces. Battery recharged is still
	    uncomplete because there are currently no time value available for
	    the recharge process.
	  - Snorkel use modified.
	* game.h, game.cpp:
	  - New method is_day_mode introduced. This method is needed to activate
	    red light mode during night.
	  - Time gap for night mode modified.
	* user_interface.h, user_interface.cpp, sub_interface.cpp:
	  - New methods for red light mode.
	  - Red light mode during night.