@@ -1,3 +1,8 @@
+2003-04-25  Markus Petermann  <m.petermann@gmx.net>
+
+	* logbook.h, logbook.cpp:
+	  - New module to create logbook entries.
+
 2003-04-21  Markus Petermann  <m.petermann@gmx.net>
 
 	* sound.h, sound.cpp:
